--- a/index.html
+++ b/index.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiX</title>
+    <link rel="stylesheet" href="desk.css" />
+    <link rel="stylesheet" href="tab.css" />
+    <link rel="stylesheet" href="phone.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="#hero">LIX</a>
+        </li>
+        <li>
+          <a href="#about">ABOUT</a>
+        </li>
+        <li>
+          <a href="#project">PROJECT</a>
+        </li>
+        <li>
+          <a href="#contact">CONTACT</a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <div id="hero">
+        <section></section>
+      </div>
+      <div id="about">
+        <section></section>
+      </div>
+      <div id="project">
+        <section></section>
+      </div>
+      <div id="contact">
+        <section></section>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
