tidy up folders📂

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiX</title>
-    <link rel="stylesheet" href="desk.css" />
-    <link rel="stylesheet" href="tab.css" />
-    <link rel="stylesheet" href="phone.css" />
+    <link rel="stylesheet" href="css/desk.css" />
+    <link rel="stylesheet" href="css/tab.css" />
+    <link rel="stylesheet" href="css/phone.css" />
   </head>
   <body>
     <nav>
