--- a/index.html
+++ b/index.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiX</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/desk.css" />
     <link rel="stylesheet" href="css/tab.css" />
     <link rel="stylesheet" href="css/phone.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>
-          <a href="#hero">LIX</a>
-        </li>
-        <li>
-          <a href="#about">ABOUT</a>
-        </li>
-        <li>
-          <a href="#project">PROJECT</a>
-        </li>
-        <li>
-          <a href="#contact">CONTACT</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="nav-wrapper">
+      <nav>
+        <ul>
+          <li>
+            <a href="#hero"><i class="fa-solid fa-house"></i></a>
+          </li>
+          <li>
+            <a href="#about"><i class="fa-solid fa-address-card"></i></a>
+          </li>
+          <li>
+            <a href="#project"><i class="fa-solid fa-bug"></i></a>
+          </li>
+          <li>
+            <a href="#contact"><i class="fa-solid fa-phone"></i></a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <main>
       <div id="hero">
         <section></section>
