--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
     </div>
     <main>
       <div id="hero">
-        <section></section>
+        <section>
+          <div class="hero-wrapper">
+            <div class="text-hero">
+              <p>Hi 👋, I'm Lix</p>
+            </div>
+          </div>
+        </section>
       </div>
       <div id="about">
         <section></section>
