--- a/index.html
+++ b/index.html
@@ -17,40 +17,63 @@
       <nav>
         <ul>
           <li>
-            <a href="#hero"><i class="fa-solid fa-house"></i></a>
+            <a href="#hero"
+              ><i class="fa-solid fa-house" style="color: aliceblue"></i
+            ></a>
           </li>
           <li>
-            <a href="#about"><i class="fa-solid fa-address-card"></i></a>
+            <a href="#about"
+              ><i class="fa-solid fa-address-card" style="color: aliceblue"></i
+            ></a>
           </li>
           <li>
-            <a href="#project"><i class="fa-solid fa-bug"></i></a>
+            <a href="#project"
+              ><i class="fa-solid fa-bug" style="color: aliceblue"></i
+            ></a>
           </li>
           <li>
-            <a href="#contact"><i class="fa-solid fa-phone"></i></a>
+            <a href="#contact"
+              ><i class="fa-solid fa-phone" style="color: aliceblue"></i
+            ></a>
           </li>
         </ul>
       </nav>
     </div>
     <main>
-      <div id="hero">
+      <div class="hero" id="hero">
         <section>
           <div class="hero-wrapper">
             <div class="text-hero">
-              <p>Hi 👋, I'm Lix</p>
+              <p class="myname">Malik</p>
+              <div class="container">
+                <p>
+                  I'm a<span class="typed-text"></span
+                  ><span class="cursor">&nbsp;</span>
+                </p>
+              </div>
+              <p>
+                My name is Malik, I've got some skills in graphic design and
+                creating user interfaces for websites and mobile apps. Plus, I'm
+                really into becoming a front-end web developer.
+              </p>
+            </div>
+            <div class="img-wrapper">
+              <img src="./img/lix.jpg" alt="" />
             </div>
           </div>
         </section>
       </div>
-      <div id="about">
+      <div class="about" id="about">
         <section></section>
       </div>
-      <div id="project">
+      <div class="project" id="project">
         <section></section>
       </div>
-      <div id="contact">
+      <div class="contact" id="contact">
         <section></section>
       </div>
     </main>
     <footer></footer>
   </body>
+  <script src="/js/index.js"></script>
 </html>
