--- a/index.html
+++ b/index.html
@@ -9,32 +9,23 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link rel="stylesheet" href="css/desk.css" />
-    <link rel="stylesheet" href="css/tab.css" />
-    <link rel="stylesheet" href="css/phone.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <div class="nav-wrapper">
       <nav>
         <ul>
           <li>
-            <a href="#hero"
-              ><i class="fa-solid fa-house" style="color: aliceblue"></i
-            ></a>
+            <a href="#hero"><i class="fa-solid fa-house"></i></a>
           </li>
           <li>
-            <a href="#about"
-              ><i class="fa-solid fa-address-card" style="color: aliceblue"></i
-            ></a>
+            <a href="#about"><i class="fa-solid fa-address-card"></i></a>
           </li>
           <li>
-            <a href="#project"
-              ><i class="fa-solid fa-bug" style="color: aliceblue"></i
-            ></a>
+            <a href="#project"><i class="fa-solid fa-bug"></i></a>
           </li>
           <li>
-            <a href="#contact"
-              ><i class="fa-solid fa-phone" style="color: aliceblue"></i
-            ></a>
+            <a href="#contact"><i class="fa-solid fa-phone"></i></a>
           </li>
         </ul>
       </nav>
@@ -43,28 +34,78 @@
       <div class="hero" id="hero">
         <section>
           <div class="hero-wrapper">
-            <div class="text-hero">
-              <p class="myname">Malik</p>
-              <div class="container">
+            <div class="text-img-wrapper">
+              <div class="text-hero">
+                <p class="myname">Malik</p>
+                <div class="container">
+                  <p>
+                    I'm a<span class="typed-text"></span
+                    ><span class="cursor">&nbsp;</span>
+                  </p>
+                </div>
                 <p>
-                  I'm a<span class="typed-text"></span
-                  ><span class="cursor">&nbsp;</span>
+                  My name is Malik, I've got some skills in graphic design and
+                  creating user interfaces for websites and mobile apps. Plus,
+                  I'm really into becoming a fullstack web developer.
                 </p>
               </div>
-              <p>
-                My name is Malik, I've got some skills in graphic design and
-                creating user interfaces for websites and mobile apps. Plus, I'm
-                really into becoming a front-end web developer.
-              </p>
+              <div class="img-wrapper">
+                <img src="./img/lix.jpg" alt="" />
+              </div>
             </div>
-            <div class="img-wrapper">
-              <img src="./img/lix.jpg" alt="" />
+            <div class="sosmed-wrapper">
+              <div class="sosmed">
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/abdul-malik-matoha-8aa454254/"
+                  rel="no-referrer"
+                  ><i
+                    class="fa-brands fa-linkedin"
+                    style="color: #125c13; font-size: 2em"
+                  ></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://github.com/Malixl"
+                  rel="no-referrer"
+                  ><i
+                    class="fa-brands fa-github"
+                    style="color: #125c13; font-size: 2em"
+                  ></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://www.behance.net/malikmatoha"
+                  rel="no-referrer"
+                  ><i
+                    class="fa-brands fa-square-behance"
+                    style="color: #125c13; font-size: 2em"
+                  ></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/mlikmth/"
+                  rel="no-referrer"
+                  ><i
+                    class="fa-brands fa-square-instagram"
+                    style="color: #125c13; font-size: 2em"
+                  ></i
+                ></a>
+              </div>
             </div>
           </div>
         </section>
       </div>
       <div class="about" id="about">
-        <section></section>
+        <section>
+          <div class="about-wrapper">
+            <div class="about-heading"></div>
+            <div class="skills">
+              <div class="skills-heading"></div>
+              <div class="skill"></div>
+            </div>
+          </div>
+        </section>
       </div>
       <div class="project" id="project">
         <section></section>
