--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     ><span class="cursor">&nbsp;</span>
                   </p>
                 </div>
-                <p>
+                <p class="desc">
                   My name is Malik, I've got some skills in graphic design and
                   creating user interfaces for websites and mobile apps. Plus,
                   I'm really into becoming a fullstack web developer.
@@ -99,10 +99,29 @@
       <div class="about" id="about">
         <section>
           <div class="about-wrapper">
-            <div class="about-heading"></div>
-            <div class="skills">
-              <div class="skills-heading"></div>
-              <div class="skill"></div>
+            <div class="soft-skill">
+              <div class="sf-heading">
+                <h2>Softskill</h2>
+              </div>
+              <div class="card-wrapper">
+                <div class="card-skill">
+                  <i class="fa-solid fa-book-open-reader"></i>
+                  <p>Adaptability</p>
+                </div>
+                <div class="card-skill">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>Leadership</p>
+                </div>
+                <div class="card-skill">
+                  <i class="fa-solid fa-chart-pie"></i>
+                  <p>Problem Solving</p>
+                </div>
+              </div>
+            </div>
+            <div class="hard-skill">
+              <div class="hs-heading">
+                <h2>Hardskill</h2>
+              </div>
             </div>
           </div>
         </section>
