--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="card-skill">
                   <i class="fa-solid fa-chart-pie"></i>
-                  <p>Problem Solving</p>
+                  <p>problem solving</p>
                 </div>
               </div>
             </div>
@@ -122,12 +122,28 @@
               <div class="hs-heading">
                 <h2>Hardskill</h2>
               </div>
+                <div class="hs-icon">
+                  <img src="./img/ai.png" alt="adobe illustrator" />
+                  <img src="./img/ps.png" alt="" />
+                  <img src="./img/fg.png" alt="" />
+                  <img src="./img/html.png" alt="" />
+                  <img src="./img/css.png" alt="" />
+                  <img src="./img/js.png" alt="" />
+                  <img src="./img/tw.png" alt="" />
+                  <img src="./img/react.png" alt="" />
+                </div>
+              </div>
             </div>
           </div>
         </section>
       </div>
       <div class="project" id="project">
-        <section></section>
+        <section>
+          <div class="project-wrapper">
+            <h1>Project</h1>
+            <div class="card-project"></div>
+          </div>
+        </section>
       </div>
       <div class="contact" id="contact">
         <section></section>
