fix responsive again 😣

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="css/desk.css" />
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="icon" href="./img/lix-logo.png" />
   </head>
   <body>
     <div class="nav-wrapper">
@@ -101,7 +102,7 @@
           <div class="about-wrapper">
             <div class="soft-skill">
               <div class="sf-heading">
-                <h2>Softskill</h2>
+                <h2>SOFTSKILL</h2>
               </div>
               <div class="card-wrapper">
                 <div class="card-skill">
@@ -120,18 +121,17 @@
             </div>
             <div class="hard-skill">
               <div class="hs-heading">
-                <h2>Hardskill</h2>
+                <h2>HARDSKILL</h2>
               </div>
-                <div class="hs-icon">
-                  <img src="./img/ai.png" alt="adobe illustrator" />
-                  <img src="./img/ps.png" alt="" />
-                  <img src="./img/fg.png" alt="" />
-                  <img src="./img/html.png" alt="" />
-                  <img src="./img/css.png" alt="" />
-                  <img src="./img/js.png" alt="" />
-                  <img src="./img/tw.png" alt="" />
-                  <img src="./img/react.png" alt="" />
-                </div>
+              <div class="hs-icon">
+                <img src="./img/ai.png" alt="" />
+                <img src="./img/ps.png" alt="" />
+                <img src="./img/fg.png" alt="" />
+                <img src="./img/html.png" alt="" />
+                <img src="./img/css.png" alt="" />
+                <img src="./img/js.png" alt="" />
+                <img src="./img/tw.png" alt="" />
+                <img src="./img/react.png" alt="" />
               </div>
             </div>
           </div>
@@ -140,16 +140,42 @@
       <div class="project" id="project">
         <section>
           <div class="project-wrapper">
-            <h1>Project</h1>
-            <div class="card-project"></div>
+            <div class="project-heading">
+              <h1>PROJECT</h1>
+            </div>
+            <div class="card-project">
+              <div class="heading-card">
+                <img src="" alt="" />
+              </div>
+              <div class="content-card">
+                <h3></h3>
+                <p></p>
+              </div>
+              <div class="button">
+                <button></button>
+              </div>
+            </div>
+            <div class="see-all">
+              <!-- <a href="">see all</a> -->
+            </div>
           </div>
         </section>
       </div>
       <div class="contact" id="contact">
-        <section></section>
+        <section>
+          <div class="contact-wrapper">
+            <div class="contact-heading">
+              <h3></h3>
+              <p></p>
+            </div>
+          </div>
+          <div class="form-wrapper">
+            <form action=""></form>
+            <button></button>
+          </div>
+        </section>
       </div>
     </main>
-    <footer></footer>
   </body>
   <script src="/js/index.js"></script>
 </html>
