--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="card-skill">
                   <i class="fa-solid fa-chart-pie"></i>
-                  <p>problem solving</p>
+                  <p>Problem Solving</p>
                 </div>
               </div>
             </div>
@@ -143,35 +143,170 @@
             <div class="project-heading">
               <h1>PROJECT</h1>
             </div>
-            <div class="card-project">
-              <div class="heading-card">
-                <img src="" alt="" />
+            <div class="cardp-wrapper">
+              <div class="card-project">
+                <div class="heading-card">
+                  <img src="img/project/KSLUI.png" alt="Project Image" />
+                </div>
+                <div class="content-card">
+                  <h3>UI Website KSL</h3>
+                  <p>
+                    Design a landing page for new website Kelompok Studi Linux
+                    with glassmorphism theme.
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a href="https://kslung.com/" target="_blank">
+                    <button>Detail</button>
+                  </a>
+                </div>
               </div>
-              <div class="content-card">
-                <h3></h3>
-                <p></p>
+              <div class="card-project">
+                <div class="heading-card">
+                  <img src="img/project/MaskotINU.png" alt="Project Image" />
+                </div>
+                <div class="content-card">
+                  <h3>Si INU</h3>
+                  <p>
+                    Si INU, is new maskot logo for Kelompok Studi Linux (KSL)
+                    campus organization.
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a href="https://www.instagram.com/ksl.ung/" target="_blank">
+                    <button>Detail</button>
+                  </a>
+                </div>
               </div>
-              <div class="button">
-                <button></button>
+              <div class="card-project">
+                <div class="heading-card">
+                  <img src="img/project/Mindland.png" alt="Project Image" />
+                </div>
+                <div class="content-card">
+                  <h3>Mindland</h3>
+                  <p>
+                    Website application as a consultation platform about mental
+                    health problems.
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a href="https://mindland.netlify.app/" target="_blank">
+                    <button>Detail</button>
+                  </a>
+                </div>
+              </div>
+              <div class="card-project">
+                <div class="heading-card">
+                  <img src="img/project/Merch.png" alt="Project Image" />
+                </div>
+                <div class="content-card">
+                  <h3>KSL Merch</h3>
+                  <p>
+                    Merchandise bundle for Kelompok Studi Linux, which includes
+                    Hat, Totebag, T-shirt & Keychain.
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a href="https://www.instagram.com/ksl.ung/" target="_blank">
+                    <button>Detail</button>
+                  </a>
+                </div>
+              </div>
+              <div class="card-project">
+                <div class="heading-card">
+                  <img
+                    src="img/project/RestaurantCatalogue.png"
+                    alt="Project Image"
+                  />
+                </div>
+                <div class="content-card">
+                  <h3>EAT</h3>
+                  <p>
+                    Restaurant catalog application with the implementation of a
+                    progressive web application.
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a
+                    href="https://github.com/Malixl/Restaurant-Catalogue.git"
+                    target="_blank"
+                  >
+                    <button>Detail</button>
+                  </a>
+                </div>
+              </div>
+              <div class="card-project">
+                <div class="heading-card">
+                  <img
+                    src="img/project/TradisonalFood.png"
+                    alt="Project Image"
+                  />
+                </div>
+                <div class="content-card">
+                  <h3>Traditional Foods Poster</h3>
+                  <p>
+                    Poster design with the theme of traditional Gorontalo foods,
+                    Dumalo & Balapis.
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a
+                    href="https://www.instagram.com/lixdesign_/"
+                    target="_blank"
+                  >
+                    <button>Detail</button>
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="see-all">
-              <!-- <a href="">see all</a> -->
-            </div>
+            <div class="see-all"></div>
           </div>
         </section>
       </div>
       <div class="contact" id="contact">
         <section>
-          <div class="contact-wrapper">
-            <div class="contact-heading">
-              <h3></h3>
-              <p></p>
+          <div class="contact-container">
+            <div class="contact-wrapper">
+              <div class="contact-heading">
+                <h2>GET IN TOUCH</h2>
+                <p>Interested to work with me? Let's talk!</p>
+              </div>
             </div>
-          </div>
-          <div class="form-wrapper">
-            <form action=""></form>
-            <button></button>
+            <div class="form-wrapper">
+              <form>
+                <div class="group-wrapper">
+                  <div class="input-group">
+                    <input
+                      type="text"
+                      class="name"
+                      placeholder="Full Name"
+                      required
+                    />
+                    <input
+                      type="text"
+                      class="email"
+                      placeholder="example@gmail.com"
+                      required
+                    />
+                    <input
+                      placeholder="Type your message here..."
+                      class="message"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="button-c">
+                  <a clas="button-style" href="">
+                    <button onclick="sendwhatsapp();" type="submit">
+                      <div class="button-content">
+                        <img src="./img/wangsaf.png" alt="" />
+                        <span>Send Message</span>
+                      </div>
+                    </button>
+                  </a>
+                </div>
+              </form>
+            </div>
           </div>
         </section>
       </div>
