--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
                 <div class="button-c">
                   <a clas="button-style" href="">
-                    <button onclick="sendwhatsapp();" type="submit">
+                    <button onclick="sendwhatsapp();">
                       <div class="button-content">
                         <img src="./img/wangsaf.png" alt="" />
                         <span>Send Message</span>
