--- a/index.html
+++ b/index.html
@@ -280,22 +280,15 @@
               <form>
                 <div class="group-wrapper">
                   <div class="input-group">
-                    <input
-                      type="text"
-                      class="name"
-                      placeholder="Full Name"
-                      required
-                    />
+                    <input type="text" class="name" placeholder="Full Name" />
                     <input
                       type="text"
                       class="email"
                       placeholder="example@gmail.com"
-                      required
                     />
                     <input
                       placeholder="Type your message here..."
                       class="message"
-                      required
                     />
                   </div>
                 </div>
