--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <h3>UI Website KSL</h3>
                   <p>
                     Design a landing page for new website Kelompok Studi Linux
-                    with glassmorphism theme.
+                    with glassmorphism theme
                   </p>
                 </div>
                 <div class="button-p">
@@ -173,7 +173,7 @@
                   <h3>Si INU</h3>
                   <p>
                     Si INU, is new maskot logo for Kelompok Studi Linux (KSL)
-                    campus organization.
+                    campus organization
                   </p>
                 </div>
                 <div class="button-p">
@@ -190,7 +190,7 @@
                   <h3>Mindland</h3>
                   <p>
                     Website application as a consultation platform about mental
-                    health problems.
+                    health problems
                   </p>
                 </div>
                 <div class="button-p">
@@ -207,7 +207,7 @@
                   <h3>KSL Merch</h3>
                   <p>
                     Merchandise bundle for Kelompok Studi Linux, which includes
-                    Hat, Totebag, T-shirt & Keychain.
+                    Hat, Totebag, T-shirt & Keychain
                   </p>
                 </div>
                 <div class="button-p">
@@ -227,7 +227,7 @@
                   <h3>EAT</h3>
                   <p>
                     Restaurant catalog application with the implementation of a
-                    progressive web application.
+                    progressive web application
                   </p>
                 </div>
                 <div class="button-p">
@@ -250,7 +250,7 @@
                   <h3>Traditional Foods Poster</h3>
                   <p>
                     Poster design with the theme of traditional Gorontalo foods,
-                    Dumalo & Balapis.
+                    Dumalo & Balapis
                   </p>
                 </div>
                 <div class="button-p">
