--- a/index.html
+++ b/index.html
@@ -309,5 +309,5 @@
       </div>
     </main>
   </body>
-  <script src="./js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </html>
