--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
                 <p class="desc">
                   My name is Malik, I've got some skills in graphic design and
                   creating user interfaces for websites and mobile apps. Plus,
-                  I'm really into becoming a fullstack web developer.
+                  I'm really into becoming a fullstack web developer. <br />
+                  <a
+                    href="https://drive.google.com/file/d/1lq5SxFQXcTGvdasHo8uf6PV7YhwMBNxf/view?usp=sharing"
+                    target="_blank"
+                    rel="no-referrer"
+                    >Download CV</a
+                  >
                 </p>
               </div>
               <div class="img-wrapper">
