--- a/index.html
+++ b/index.html
@@ -173,6 +173,38 @@
               </div>
               <div class="card-project">
                 <div class="heading-card">
+                  <img src="img/project/WebGISTANA.png" alt="Project Image" />
+                </div>
+                <div class="content-card">
+                  <h3>UI Website Gistana</h3>
+                  <p>
+                    Creating a GIS website UI to view evacuation routes and gathering points in certain areas of Bone Bolango district.
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a href="https://www.figma.com/design/anWVS5WN1Jt7wpo53IWnif/WebGIS-Destana?node-id=2-287&t=bqz46b53Imebjc9e-0" target="_blank">
+                    <button>Detail</button>
+                  </a>
+                </div>
+              </div>
+              <div class="card-project">
+                <div class="heading-card">
+                  <img src="img/project/DMSI.png" alt="Project Image" />
+                </div>
+                <div class="content-card">
+                  <h3>Design Feeds DMSI</h3>
+                  <p>
+                    Design Instagram Feeds for a Digital Marketing Information Systems Course
+                  </p>
+                </div>
+                <div class="button-p">
+                  <a href="https://www.instagram.com/digital_marketing_si_ung/" target="_blank">
+                    <button>Detail</button>
+                  </a>
+                </div>
+              </div>
+              <div class="card-project">
+                <div class="heading-card">
                   <img src="img/project/MaskotINU.png" alt="Project Image" />
                 </div>
                 <div class="content-card">
